@@ -659,6 +659,11 @@ Release 2.6.0 - UNRELEASED
     YARN-2652 Add hadoop-yarn-registry package under hadoop-yarn. (stevel)
 
     YARN-2668 yarn-registry JAR won't link against ZK 3.4.5. (stevel)
+    
+    YARN-2689 TestSecureRMRegistryOperations failing on windows:
+    secure ZK won't start (stevel)
+
+    YARN-2692 ktutil test hanging on some machines/ktutil versions (stevel)
 
     YARN-2598 GHS should show N/A instead of null for the inaccessible information
     (Zhijie Shen via mayank)
